# Leg-KILO

./: .clang-format  .gitignore  README.md  clang-format  clangformat.sh
legkilo/: .gitignore  CMakeLists.txt  package.xml
legkilo/cmake/: FindGlog.cmake
legkilo/config/: diter.yaml  hilti.yaml  leg_fusion.yaml  nclt.yaml  params_legkilo.yaml
legkilo/include/: common.hpp  eskf.h  glog_utils.hpp  kinematics.h  lidar_processing.h  math_utils.hpp  options.h  ros_interface.h  state_initial.hpp  timer_utils.hpp  voxel_grid.hpp  voxel_map.h  yaml_helper.hpp
legkilo/launch/: debug.launch  diter.launch  hilti.launch  leg_fusion.launch  nclt.launch
legkilo/robot_urdf/go1_description/urdf/: go1.urdf
legkilo/robot_urdf/go2_description/urdf/: go2.urdf
legkilo/rviz/: legkilo.rviz  legkilo_robot.rviz
legkilo/src/: eskf.cc  kinematics.cc  kinematics.cpp  kinematics.h  leg_kilo_node.cc  lidar_processing.cc  mapOptmization_node.cpp  options.cc  ros_interface.cc  voxel_map.cc
legkilo/src/apps/: leg_kilo_node.cc
legkilo/src/common/: common.hpp  eigen_types.hpp  math_utils.hpp  pcd_saver.hpp  pcl_types.h  sensor_types.hpp  timer_utils.hpp  trajectory_saver.hpp  voxel_grid.hpp
legkilo/src/core/slam/: KILO.cc  KILO.h  eskf.cc  eskf.h  voxel_map.cc  voxel_map.h
legkilo/src/interface/ros1/: options.cc  ros_interface.cc  ros_interface.h
legkilo/src/preprocess/: kinematics.cc  kinematics.h  lidar_processing.cc  lidar_processing.h  state_initial.hpp
unitree_legged_msgs/msg/: HighState.msg
